gap-fix

--- a/src/variables.css
+++ b/src/variables.css
@@ -99,7 +99,10 @@
     }
 }
 
-* {
+:root {
 	--gap: calc(var(--rhythm) * var(--density));
+}
+
+* {
 	accent-color: var(--accent);
 }
